<resources>
    <string name="app_name">autogallery</string>
    <string name="todo">TODO</string>
    <string name="splash_screen_sign_in">Giriş Yap</string>
    <string name="splash_screen_sign_up">Kayıt Ol</string>
    <string name="activity_login_name">E-mail</string>
    <string name="activity_login_signup">Hesabınız mı yok? Kayıt Ol.</string>
    <string name="activity_login_sign_in">Giriş Yap</string>
    <string name="activity_register_password">Şifre</string>
    <string name="activity_register_confirm_password">Şifre Tekrar</string>
    <string name="avtivity_register_sign_up">Kayıt Ol</string>
    <string name="activity_login_password">Şifre</string>
    <string name="title_activity_dashboard">Admin Paneli</string>


    <string name="hint_model_yili">Model Yılı</string>
    <string name="hint_fiyat">Fiyat</string>
    <string name="hint_km">KM</string>

    <!-- Açılan diyaloglar için -->
    <string name="hint_crash">Hasar Görmüş Yerler</string>


    <!--Kaza Raporu -->
    <string name="switch_text_changing_piece">Değişen Parçalar</string>
    <string name="switch_text_painted_piece">Boyalı Parçalar</string>
    <string name="switch_text_accident_free">Kazasız</string>
    <string name="text_accident_free">Arabanın Kazası Yoktur.</string>
    <string name="check_text_front_right_fender">Ön Sağ Çamurluk</string>
    <string name="check_text_rear_right_fender">Arka Sağ Çamurluk</string>
    <string name="check_text_front_left_fender">Ön Sol Çamurluk</string>
    <string name="check_text_rear_left_fender">Arka Sol Çamurluk</string>
    <string name="check_text_front_bumper">Ön Tampon</string>
    <string name="check_text_rear_bumper">Arka Tampon</string>
    <string name="check_text_right_front_door">Sağ Ön Kapı</string>
    <string name="check_text_left_front_door">Sol Ön Kapı</string>
    <string name="check_text_right_rear_door">Sağ Arka Kapı</string>
    <string name="check_text_left_rear_door">Sol Arka Kapı</string>
    <string name="check_text_luggage">Bagaj</string>
    <string name="check_text_ceiling">Tavan</string>
    <string name="check_text_bonnet">Kaput</string>


    <string name="contact_information_caps">TEKNİK ÖZELLİKLER</string>
    <string name="contact_information_caps2">EK ÖZELLİKLER</string>
    <string name="contact_information_caps3">KAZA RAPORU</string>
    <string name="button_advert">İlan Ekle</string>
    <string name="brand">Marka</string>
    <string name="model">Model</string>
    <string name="price">Fiyat</string>
    <string name="exit">Çıkış</string>


    <!-- Teknik Özellikler -->
    <string-array name="brand_selection">
        <item>Marka</item>
        <item>Ford</item>
        <item>Mercedes</item>
        <item>Nissan</item>
        <item>Toyota</item>
        <item>Volkswagen</item>

    </string-array>
    <string-array name="Marka">
        <item>Model</item>
    </string-array>
    <string-array name="Ford">
        <item>Cougar</item>
        <item>Fiesta</item>
        <item>Focus</item>
        <item>Granada</item>
        <item>Orion</item>
    </string-array>
    <string-array name="Mercedes">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>CLA</item>
        <item>CLC</item>
    </string-array>
    <string-array name="Nissan">
        <item>Almera</item>
        <item>Micra</item>
        <item>Note</item>
        <item>Pulsar</item>
        <item>Sunny</item>
    </string-array>
    <string-array name="Toyota">
        <item>Auris</item>
        <item>Carina</item>
        <item>Corolla</item>
        <item>Prius</item>
        <item>Verso</item>
    </string-array>
    <string-array name="Volkswagen">
        <item>Bora</item>
        <item>Golf</item>
        <item>Jetta</item>
        <item>Passat</item>
        <item>Polo</item>
    </string-array>

    <string-array name="gear">
        <item>Vites</item>
        <item>Manuel</item>
        <item>Yarı Otomatik</item>
        <item>Otomatik</item>
    </string-array>
    <string-array name="fuel_type">
        <item>Yakıt Tipi</item>
        <item>Benzin</item>
        <item>Dizel</item>
        <item>Hybrid</item>
        <item>Elektrik</item>
    </string-array>
    <string-array name="engine_capacity">
        <item>Motor Hacmi</item>
        <item>1201-1400 cm3</item>
        <item>1401-1600 cm3</item>
        <item>1601-1800 cm3</item>
        <item>1801-2000 cm3</item>
        <item>2001-2500 cm3</item>

    </string-array>
    <string-array name="fuel_comsumption">
        <item>Yakıt Tüketimi</item>
        <item>4.3 lt / 4.9 lt</item>
        <item>5 lt3 / 6.1 lt</item>
        <item>5.3 lt/ 6.5 lt cm3</item>

    </string-array>
    <string-array name="engine_power">
        <item>Motor Gücü</item>
        <item>51-71 HP</item>
        <item>76-100 HP</item>
        <item>101-125 HP</item>
        <item>126-150 HP</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="takephoto">Fotoğraf Çek</string>
    <string name="selectgallery">Galeriye Git</string>
    <string name="add_description">Açıklama Ekle</string>
    <string name="gear">Vites</string>
    <string name="fuel_type">Yakıt Tipi</string>
    <string name="engine_capacity">Motor Hacmi</string>
    <string name="fuel_comsuption">Yakıt Tüketimi</string>
    <string name="engine_power">Motor Gücü</string>
    <string name="auto_info_title">İlan Detay</string>
    <string name="auto_add_title">İlan Ekle</string>


</resources>
