<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="false"
    tools:context=".ui.AutoInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/activity_auto_info_photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_gravity="center"
            android:src="@drawable/icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etDetayName" />


        <ProgressBar
            android:id="@+id/activity_info_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_gravity="center"
            android:visibility="invisible"
            tools:ignore="MissingConstraints" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/contact_information_caps"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/activity_auto_info_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/brand"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/font_medium" />

        <TextView
            android:id="@+id/activity_auto_info_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/model"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/font_medium" />

        <TextView
            android:id="@+id/activity_auto_info_model_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/hint_model_yili"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/font_medium" />

        <TextView
            android:id="@+id/activity_auto_info_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/price"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/font_medium" />


        <TextView
            android:id="@+id/activity_auto_info_km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/hint_km"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/font_medium" />

        <TextView
            android:id="@+id/activity_auto_info_gear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/gear"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/font_medium" />

        <TextView
            android:id="@+id/activity_auto_info_fuel_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/fuel_type"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/font_medium" />


        <TextView
            android:id="@+id/activity_auto_info_engine_capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/engine_capacity"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/font_medium" />

        <TextView
            android:id="@+id/activity_auto_info_fuel_comsuption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/fuel_comsuption"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/font_medium" />

        <TextView
            android:id="@+id/activity_auto_info_engine_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/engine_power"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/font_medium" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_smaller"
            android:background="@drawable/shape_stroke_top_bottom_gray"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:text="@string/contact_information_caps2"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_medium"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/activity_auto_info_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:text="@string/add_description"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/font_medium" />


        </LinearLayout>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>